# servant-freer-simple

./: .gitignore  LICENSE  README.md  servant-freer-simple.cabal  stack.yaml
src/: Main.hs
