name:                servant-freer-simple
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/servant-freer-simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable servant-freer-simple
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , freer-simple
                     , mtl
                     , servant
                     , servant-server
                     , text
                     , wai
                     , warp
